--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
     <p>I am Swaroop R. Shetty, a passionate Fullstack Developer from Sirsi, Uttara Kannada. I graduated with a Bachelor of Engineering in Electronics and Communication from KLSVDIT Haliyal. My journey in tech started with a curiosity for how websites work and grew into a career where I build intuitive and powerful web solutions.</p>
     <h3>Skills</h3>
     <ul>
+      <li> Website Design (ui/ux) and front end development.</li>
       <li>Languages: HTML, CSS, JavaScript, Python, C</li>
-      <li>Tools: VS Code, GitHub, MATLAB, Multisim, Cadence, Octave</li>
+      <li>Tools: VS Code, GitHub, Figma, Framer, Inkscape, MATLAB, Multisim, Cadence, Octave</li>
       <li>Soft Skills: Problem Solving, Team Collaboration, Decision Making</li>
     </ul>
   </section>  <section id="projects">
@@ -78,12 +79,10 @@
       <li><strong>Detection of Phishing Websites Using Machine Learning</strong><br>
       Developed using JavaScript, Python, and MySQL. This project aims to identify phishing websites by analyzing site features and applying classification algorithms to enhance online security.</li><li><strong>7-Channel Radio Transceiver System</strong><br>
   Designed a hardware solution that allows communication over seven different frequencies. Involves antenna tuning, RF integration, and multi-channel switching mechanisms for seamless operation.</li>
-
-  <li><strong>Controlled Voltage Divider Circuit</strong><br>
-  Built and simulated a programmable voltage divider using resistive networks. Used for signal conditioning in sensor interfacing modules.</li>
-
-  <li><strong>IoT-based Smart Alert System</strong><br>
-  Implemented a NodeMCU-based alert system with real-time data feedback for safety applications using Blynk and mobile push notifications.</li>
+ 
+      <li><strong>7 Channel Radio Transceiver System</strong><br>
+   Designed and implemented a 7-channel radio transceiver system capable of simultaneous transmission and reception across multiple frequencies.
+The system uses RF modules and microcontrollers for efficient channel switching and data communication.</li>
 </ul>
 
   </section>  <section id="experience">
@@ -103,11 +102,12 @@
   </section>  <section id="certifications">
     <h2>Certifications</h2>
     <ul>
+      <li> Web development - Simplilearn</li>
       <li>JavaScript for Beginners – Scalar</li>
       <li>Introduction to Ethical Hacking – Great Learning</li>
       <li>Microsoft Azure AI Fundamentals – Microsoft</li>
       <li>Python and IoT – Practical Application Program</li>
-      <li>Coding Carnival – Prepleaf</li>
+      
     </ul>
   </section>  <section id="contact">
     <h2>Contact Me</h2>
