--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <p>I am Swaroop R. Shetty, a passionate Fullstack Developer from Sirsi, Uttara Kannada. I graduated with a Bachelor of Engineering in Electronics and Communication from KLSVDIT Haliyal. My journey in tech started with a curiosity for how websites work and grew into a career where I build intuitive and powerful web solutions.</p>
     <h3>Skills</h3>
     <ul>
-      <li> Website Design (ui/ux) and front end development.</li>
+      <li> Website Design (ui/ux), and front end development.</li>
       <li>Languages: HTML, CSS, JavaScript, Python, C</li>
       <li>Tools: VS Code, GitHub, Figma, Framer, Inkscape, MATLAB, Multisim, Cadence, Octave</li>
       <li>Soft Skills: Problem Solving, Team Collaboration, Decision Making</li>
