Revert to original version

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <p>I am Swaroop R. Shetty, a passionate Fullstack Developer from Sirsi, Uttara Kannada. I graduated with a Bachelor of Engineering in Electronics and Communication from KLSVDIT Haliyal. My journey in tech started with a curiosity for how websites work and grew into a career where I build intuitive and powerful web solutions.</p>
     <h3>Skills</h3>
     <ul>
-      <li> Website Design (ui/ux), and front end development.</li>
+      <li> Website Design (ui/ux) and front end development.</li>
       <li>Languages: HTML, CSS, JavaScript, Python, C</li>
       <li>Tools: VS Code, GitHub, Figma, Framer, Inkscape, MATLAB, Multisim, Cadence, Octave</li>
       <li>Soft Skills: Problem Solving, Team Collaboration, Decision Making</li>
@@ -80,7 +80,10 @@
       Developed using JavaScript, Python, and MySQL. This project aims to identify phishing websites by analyzing site features and applying classification algorithms to enhance online security.</li><li><strong>7-Channel Radio Transceiver System</strong><br>
   Designed a hardware solution that allows communication over seven different frequencies. Involves antenna tuning, RF integration, and multi-channel switching mechanisms for seamless operation.</li>
  
-      </ul>
+      <li><strong>7 Channel Radio Transceiver System</strong><br>
+   Designed and implemented a 7-channel radio transceiver system capable of simultaneous transmission and reception across multiple frequencies.
+The system uses RF modules and microcontrollers for efficient channel switching and data communication.</li>
+</ul>
 
   </section>  <section id="experience">
     <h2>Experience & Education</h2>
@@ -103,7 +106,7 @@
       <li>JavaScript for Beginners – Scalar</li>
       <li>Introduction to Ethical Hacking – Great Learning</li>
       <li>Microsoft Azure AI Fundamentals – Microsoft</li>
-     
+      <li>Python and IoT – Practical Application Program</li>
       
     </ul>
   </section>  <section id="contact">
