--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       color: #1abc9c;
       text-decoration: none;
       font-weight: bold;
+      font-size: 12px;
     }
     nav a:hover {
       color: #00ffd5;
