--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Swaroop R. Shetty - Full Portfolio</title>
@@ -20,7 +21,7 @@
       color: #1abc9c;
       text-decoration: none;
       font-weight: bold;
-      font-size: 50px;
+      font-size: 18px; /* Increased from 12px */
     }
     nav a:hover {
       color: #00ffd5;
@@ -61,60 +62,73 @@
       <a href="#certifications">Certifications</a>
       <a href="#contact">Contact</a>
     </nav>
-  </header>  <section id="hero">
+  </header>
+
+  <section id="hero">
     <h2>Fullstack Developer</h2>
     <p>Driven by curiosity and creativity, I build full-stack web applications that solve real-world problems with clean and efficient design.</p>
-  </section>  <section id="about">
+  </section>
+
+  <section id="about">
     <h2>About Me</h2>
     <p>I am Swaroop R. Shetty, a passionate Fullstack Developer from Sirsi, Uttara Kannada. I graduated with a Bachelor of Engineering in Electronics and Communication from KLSVDIT Haliyal. My journey in tech started with a curiosity for how websites work and grew into a career where I build intuitive and powerful web solutions.</p>
     <h3>Skills</h3>
     <ul>
-      <li> Website Design (ui/ux) and front end development.</li>
+      <li>Website Design (ui/ux) and front end development.</li>
       <li>Languages: HTML, CSS, JavaScript, Python, C</li>
       <li>Tools: VS Code, GitHub, Figma, Framer, Inkscape, MATLAB, Multisim, Cadence, Octave</li>
       <li>Soft Skills: Problem Solving, Team Collaboration, Decision Making</li>
     </ul>
-  </section>  <section id="projects">
+  </section>
+
+  <section id="projects">
     <h2>Projects</h2>
     <ul>
       <li><strong>Detection of Phishing Websites Using Machine Learning</strong><br>
-      Developed using JavaScript, Python, and MySQL. This project aims to identify phishing websites by analyzing site features and applying classification algorithms to enhance online security.</li><li><strong>7-Channel Radio Transceiver System</strong><br>
-  Designed a hardware solution that allows communication over seven different frequencies. Involves antenna tuning, RF integration, and multi-channel switching mechanisms for seamless operation.</li>
- 
-      </ul>
+        Developed using JavaScript, Python, and MySQL. This project aims to identify phishing websites by analyzing site features and applying classification algorithms to enhance online security.
+      </li>
+      <li><strong>7-Channel Radio Transceiver System</strong><br>
+        Designed and implemented a 7-channel radio transceiver system capable of simultaneous transmission and reception across multiple frequencies. The system uses RF modules and microcontrollers for efficient channel switching and data communication.
+      </li>
+    </ul>
+  </section>
 
-  </section>  <section id="experience">
+  <section id="experience">
     <h2>Experience & Education</h2>
     <ul>
       <li><strong>Rooman Technologies</strong> — Data Quality Analyst (Nov 2024 – Present)<br>
-      Responsible for ensuring clean, accurate, and reliable data for AI training datasets. Tasks included normalization, validation, and categorization of data sets while adhering to privacy standards.</li><li><strong>NASD Dandeli</strong> — Web Programming & Computer Hardware (Oct 2023)<br>
-  Gained practical knowledge in basic web technologies and computer hardware maintenance. Achieved Grade A in Web Programming and A+ in Hardware.</li>
+        Responsible for ensuring clean, accurate, and reliable data for AI training datasets. Tasks included normalization, validation, and categorization of data sets while adhering to privacy standards.
+      </li>
+      <li><strong>NASD Dandeli</strong> — Web Programming & Computer Hardware (Oct 2023)<br>
+        Gained practical knowledge in basic web technologies and computer hardware maintenance. Achieved Grade A in Web Programming and A+ in Hardware.
+      </li>
+      <li><strong>KLS VDIT, Haliyal</strong> — B.E. in Electronics and Communication (2021 – 2025)<br>
+        Academic focus on communication systems, VLSI, embedded systems, and programming fundamentals.
+      </li>
+      <li><strong>Shree Marikamba PU College, Sirsi</strong> — PCME (2019 – 2021)<br>
+        Secured 79% with emphasis on Physics, Chemistry, Mathematics, and Electronics.
+      </li>
+    </ul>
+  </section>
 
-  <li><strong>KLS VDIT, Haliyal</strong> — B.E. in Electronics and Communication (2021 – 2025)<br>
-  Academic focus on communication systems, VLSI, embedded systems, and programming fundamentals.</li>
-
-  <li><strong>Shree Marikamba PU College, Sirsi</strong> — PCME (2019 – 2021)<br>
-  Secured 79% with emphasis on Physics, Chemistry, Mathematics, and Electronics.</li>
-</ul>
-
-  </section>  <section id="certifications">
+  <section id="certifications">
     <h2>Certifications</h2>
     <ul>
-      <li> Web development - Simplilearn</li>
+      <li>Web development - Simplilearn</li>
       <li>JavaScript for Beginners – Scalar</li>
       <li>Introduction to Ethical Hacking – Great Learning</li>
       <li>Microsoft Azure AI Fundamentals – Microsoft</li>
       <li>Python and IoT – Practical Application Program</li>
-      
     </ul>
-  </section>  <section id="contact">
+  </section>
+
+  <section id="contact">
     <h2>Contact Me</h2>
     <p>Email: <a href="mailto:swaroopshetty5340@gmail.com">swaroopshetty5340@gmail.com</a></p>
     <p>Phone: +91-8147715340</p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/swaroop-shetty-80a117229" target="_blank">linkedin.com/in/swaroop-shetty</a></p>
-    
-     </section>  <footer>
-   
-  </footer>
+  </section>
+
+  <footer></footer>
 </body>
 </html>
