--- a/index.html
+++ b/index.html
@@ -16,12 +16,19 @@
       padding: 1rem;
       text-align: center;
     }
+    nav {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1.5em;
+      margin-top: 0.5rem;
+    }
     nav a {
-      margin: 0 1em;
       color: #1abc9c;
       text-decoration: none;
       font-weight: bold;
-      font-size: 18px; /* Increased from 12px */
+      font-size: 18px;
+      display: inline-block;
     }
     nav a:hover {
       color: #00ffd5;
@@ -46,9 +53,16 @@
       border: 2px solid #1abc9c;
       margin-top: 1rem;
     }
-    h2 { color: #1abc9c; margin-bottom: 1rem; }
-    ul { padding-left: 1.2em; }
-    li { margin-bottom: 0.5em; }
+    h2 {
+      color: #1abc9c;
+      margin-bottom: 1rem;
+    }
+    ul {
+      padding-left: 1.2em;
+    }
+    li {
+      margin-bottom: 1.5em; /* Added spacing between list items */
+    }
   </style>
 </head>
 <body>
@@ -118,7 +132,6 @@
       <li>JavaScript for Beginners – Scalar</li>
       <li>Introduction to Ethical Hacking – Great Learning</li>
       <li>Microsoft Azure AI Fundamentals – Microsoft</li>
-      <li>Python and IoT – Practical Application Program</li>
     </ul>
   </section>
 
