--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
       <li class="project-card">📡 <strong>7-Channel Radio Transceiver System</strong><br>
         Designed and implemented a 7-channel system using RF modules and microcontrollers for seamless multi-frequency communication.<br><br>
       </li>
+
+      <li class="project-card">🩺 <strong>Medsense – First Aid Guide</strong><br>
+A responsive frontend website that educates users on first aid for common medical emergencies.<br>
+👉 <a href="https://swaroopsrs.github.io/medsense/" target="_blank" style="color:#00ffd5; text-decoration: underline;">Visit Medsense Project</a><br><br>
+</li>
     </ul>
   </section>
 
@@ -204,5 +209,11 @@
       window.scrollTo({ top: 0, behavior: "smooth" });
     };
   </script>
+<section id="highlight">
+  <h2>🔍 Explore One of My Live Frontend Projects</h2>
+  <p>
+    👉 <a href="https://swaroopsrs.github.io/medsense/" target="_blank" class="social-link">🌐 Medsense – First Aid Guide</a>
+  </p>
+</section>
 </body>
 </html>
